# mdbook-bib

./: .gitignore  .rusty-hook.toml  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  HAYAGRIVA_INTEGRATION_PLAN.md  Makefile  README.md  bibliography.bib  bibliography.html  cliff.toml  config.html  contrib.html  csl.html  custom.html  dev.html  index.html  install.html  intro.html  print.html  searcher-c2a407aa.js  searchindex-552a0ffe.js  searchindex-9ebb311c.js  searchindex.js  searchindex.json  toc-7478ee4d.js  toc.html
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: changelog_prerelease.yml  claude-code-review.yml  doc.yml  publish.yml  release.yml  test.yml
example_books/: README.md
example_books/basic/src/: bibliography.bib
example_books/basic/src/chapter_1/: intro.md
example_books/basic/src/render/: my_references.hbs  my_style.css
example_books/csl_alphanumeric/src/: SUMMARY.md  bibliography.bib
example_books/csl_chicago/src/: SUMMARY.md  computing.md
example_books/csl_ieee/: book.toml
example_books/csl_ieee/src/: SUMMARY.md  biology.md
example_books/csl_nature/: book.toml
example_books/csl_nature/src/: interdisciplinary.md  intro.md
example_books/pandoc/src/: SUMMARY.md  basic.md  intro.md  refs.bib
example_books/templates/: cite_index.hbs  cite_key.hbs  refs_default.hbs
manual/: book.toml
manual/src/: SUMMARY.md  bibliography.bib  config.md  contrib.md  csl.md  custom.md  dev.md  install.md  intro.md  legacy.md  migration.md
render/: my_cite.hbs  my_references.hbs
src/: config.rs  file_utils.rs  lib.rs  main.rs  tests.rs
src/backend/: csl.rs  custom.rs  hayagriva_style.rs  legacy.rs  mod.rs
src/citation/: mod.rs
src/io/: mod.rs
src/models/: mod.rs
src/parser/: hayagriva_parser.rs  mod.rs
src/render/: chapter_refs_header.hbs  cite_author_year.hbs  cite_key.hbs  copy2clipboard.js  references.hbs  satancisco.css
src/renderer/: mod.rs
src/tests/: backend.rs  citation.rs  common.rs  config.rs  edge_cases.rs  integration.rs  parser.rs
templates/: cite_author_year.hbs  cite_index.hbs  cite_key.hbs  refs_index.hbs
test_book/: book.toml
test_book/src/: SUMMARY.md  bibliography.bib  intro.md
test_book/src/chapter_1/: intro.md
test_book/src/render/: my_references.hbs  my_style.css
test_book_csl_alphanumeric/: book.toml
test_book_csl_alphanumeric/src/: intro.md  research.md
test_book_csl_chicago/: book.toml
test_book_csl_chicago/src/: bibliography.bib  intro.md  science.md
test_book_csl_ieee/src/: computing.md  intro.md
test_book_csl_nature/src/: SUMMARY.md  biology.md
test_book_pandoc/: book.toml
test_book_pandoc/src/: edge_cases.md  refs.bib  variants.md
