[package]
name = "mdbook-bib"
version = "0.0.2"
authors = ["Francisco Perez-Sorrosal <fperezsorrosal < at > gmail < dot > com>"]
description = "mdbook plugin allowing to load and present a bibliography in BibLaTex format in your books and cite its references"
keywords = ["mdbook", "bibliography", "bib", "plugin", "preprocessor"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/francisco-perez-sorrosal/mdbook-bib"
edition = "2018"
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = "0.4"
clap = "2.24"
env_logger = "0.8.2"
handlebars = { version = "3.5.2", features = ["dir_source"] }
lazy_static = "1.0"
log = "0.4"
mdbook = { version = "0.4", default-features = false }
nom-bibtex = "0.3.0"
regex = "1.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"

[dev-dependencies]
tempfile = "3.0"

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/francisco-perez-sorrosal/mdbook-bib" }
is-it-maintained-open-issues = { repository = "https://github.com/francisco-perez-sorrosal/mdbook-bib" }
maintenance = { status = "experimental" }
travis-ci = { repository = "fperezsorrosal/mdbook-bib" }
