[package]
name = "mdbook-bib"
version = "0.0.7"
authors = ["Francisco Perez-Sorrosal <fperezsorrosal < at > gmail < dot > com>"]
description = "mdbook plugin allowing to load and present a bibliography in BibLaTex format in your books and cite its references"
keywords = ["mdbook", "bibliography", "bib", "plugin", "preprocessor"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/francisco-perez-sorrosal/mdbook-bib"
edition = "2021"
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = "0.4"
clap = { version = "4.1", features = ["help", "usage", "error-context"] }
env_logger = "0.11.8"
handlebars = { version = "6.3.2", features = ["dir_source"] }
lazy_static = "1.0"
log = "0.4"
nom-bibtex = "0.5.0"
regex = "1.0.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.121", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
indexmap = "2.12.1"
mdbook-preprocessor = "0.5.1"

[dev-dependencies]
tempfile = "^3.0"
mdbook-driver = "0.5.1"

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/francisco-perez-sorrosal/mdbook-bib" }
is-it-maintained-open-issues = { repository = "https://github.com/francisco-perez-sorrosal/mdbook-bib" }
maintenance = { status = "experimental" }
